fix: enter button responsive correctly + spacing contact text

--- a/web-src/assets/scss/components/hero/_hero.scss
+++ b/web-src/assets/scss/components/hero/_hero.scss
@@ -49,9 +49,9 @@
 }
 
 .hero__btn {
-    position: absolute;
+    position: fixed;
     right: 0;
-    top: 100%;
+    bottom: 0;
     left: 0;
     background: linear-gradient(to top, rgba($black, 0.75), rgba($black, 0));
     padding: map-get($spacers, 2);
