--- a/web/app/assets/css/main.css
+++ b/web/app/assets/css/main.css
@@ -9303,9 +9303,9 @@ body.showcase main {
   height: 100%; }
 
 .hero__btn {
-  position: absolute;
+  position: fixed;
   right: 0;
-  top: 100%;
+  bottom: 0;
   left: 0;
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.75)), to(rgba(0, 0, 0, 0)));
   background: linear-gradient(to top, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
